Upload new version

--- a/Group3/src/main/resources/templates/dashboard.html
+++ b/Group3/src/main/resources/templates/dashboard.html
@@ -47,7 +47,7 @@
           "
         >
           <h2>Manager Review</h2>
-          <a href="/reviews/list" class="btn btn-primary">Go to Review List</a>
+          <a href="/reviews" class="btn btn-primary">Go to Review List</a>
         </div>
 
         <div
